tests/baselines/reference/umd2.errors.txt
a.ts(1,1): error TS2304: Cannot find name 'Foo'.
a.ts(2,8): error TS2503: Cannot find namespace 'Foo'.


==== a.ts (2 errors) ====
    Foo.fn();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    let x: Foo.Thing;
           ~~~
!!! error TS2503: Cannot find namespace 'Foo'.
    let y: number = x.n;
    
==== foo.d.ts (0 errors) ====
    export var x: number;
    export function fn(): void;
    export as namespace Foo;
    